# flask_rest

./: app.py  pyproject.toml
migrations/versions/: eaa74bc571d9_.py
